Fortalece test con comprobacion de lista no vacia
Agent-Logs-Url: https://github.com/MVCx9/Refactorer/sessions/c19b4a18-6438-409a-8726-e69eea7050b7

Co-authored-by: MVCx9 <38212550+MVCx9@users.noreply.github.com>